examples/packs/expected/0510-packs-pack-index-oob.stderr
error: pack index 2 out of bounds: 'args' has 1 element
  --> examples/packs/0510-packs-pack-index-oob.sx:14:32
   |
14 | foo :: (..$args) -> $R => args[2];
   |                                ^
